serd (1.0.1) unstable;

  * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
  * Add SerdWorld for shared library state
  * Add extensible logging API
  * Add extensible logging API
  * Add model for storing statements in memory
  * Add option for writing terse output without newlines
  * Add support for validation
  * Add support for writing terse collections
  * Bring read/write interface closer to C standard
  * Make nodes opaque
  * Make serd_strtod API const-correct
  * Remove serd_uri_to_path()
  * Remove useless character counting from API
  * Rename SerdChunk to SerdStringView
  * Report writer errors and add strict write mode
  * Simplify streaming API and improve pretty printing
  * Simplify writer style options
  * Use a fixed-size reader stack
  * Use char* for strings in public API

 -- David Robillard <d@drobilla.net>  Sat, 19 Jan 2019 12:31:12 +0000

serd (0.30.7) unstable;

  * Deprecate serd_uri_to_path()
  * Don't install API man pages
  * Fix potential memory error when serialising URIs
  * Move headers to an include directory
  * Refuse to write relative URI references to NTriples
  * Remove use of C character class functions that may use locale
  * Split up and reorganize unit tests
  * Use aligned allocation via C11 or Windows API where possible

 -- David Robillard <d@drobilla.net>  Thu, 17 Dec 2020 09:09:31 +0000

serd (0.30.6) stable;

  * Fix various minor warnings and other code quality issues
  * Improve reader error handling
  * Make all free functions tolerant of NULL
  * Parse prefixed names more strictly

 -- David Robillard <d@drobilla.net>  Sun, 27 Sep 2020 10:51:38 +0000

serd (0.30.4) stable;

  * Fix EOF handling while reading in bulk or from strings
  * Fix lax handling of string errors
  * Fix reading from a null-delimited socket

 -- David Robillard <d@drobilla.net>  Sun, 26 Apr 2020 16:04:05 +0000

serd (0.30.2) stable;

  * Fix GCC 4 build
  * Fix colliding blank nodes when parsing TriG